misc + add tag for size changing enchantment exclusion + improved handling of hurtful consumed items